--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Yukki Music Bot",
+  "name": "✰♛𝐑𝐎𝐘𝐀𝐋♛✰🖤⃝⚔️𝐃𝐀𝐍𝐆𝐄𝐑𝐎𝐔𝐒🖤⃝⚔️✰",
   "description": "A Telegram Music Bot with proper functions written in Python with Pyrogram and Py-Tgcalls.",
   "logo": "https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg",
   "keywords": [
